--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/test
-MONGOLAB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb://localhost:32768/dayflow
+MONGOLAB_URI=mongodb://localhost:27017/dayflow
 
 SESSION_SECRET=Your Session Secret goes here
 
