--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb://localhost:32768/dayflow
 MONGOLAB_URI=mongodb://localhost:27017/dayflow
 
-SESSION_SECRET=Your Session Secret goes here
+SESSION_SECRET=123123
 
 MAILGUN_USER=postmaster@sandbox697fcddc09814c6b83718b9fd5d4e5dc.mailgun.org
 MAILGUN_PASSWORD=29eldds1uri6
@@ -14,8 +14,8 @@ NYT_KEY=9548be6f3a64163d23e1539f067fcabd:5:68537648
 LASTFM_KEY=c8c0ea1c4a6b199b3429722512fbd17f
 LASTFM_SECRET=is cb7857b8fba83f819ea46ca13681fe71
 
-FACEBOOK_ID=754220301289665
-FACEBOOK_SECRET=41860e58c256a3d7ad8267d3c1939a4a
+FACEBOOK_ID=566307403428144
+FACEBOOK_SECRET=3d71f9ffd17027f177cfa6ab930a608b
 
 INSTAGRAM_ID=9f5c39ab236a48e0aec354acb77eee9b
 INSTAGRAM_SECRET=5920619aafe842128673e793a1c40028
