--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "bootflat": "^2.0.4",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
@@ -28,7 +29,9 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.14.2",
     "express-status-monitor": "^0.1.5",
+    "express-stylus": "^0.1.0",
     "express-validator": "^3.1.2",
+    "fb": "^2.0.0",
     "fbgraph": "^1.3.0",
     "github": "^9.2.0",
     "instagram-node": "^0.5.8",
@@ -38,6 +41,7 @@
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
+    "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.4",
     "node-sass-middleware": "^0.11.0",
