--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Sahat Yalkabov",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "mocha --reporter spec",
-    "postinstall": "npm rebuild node-sass"
+    "postinstall": "npm rebuild node-sass",
+    "start": "cross-env NODE_ENV=production node app.js",
+    "build-dev": "rimraf dist && cross-env NODE_ENV=development webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
@@ -38,7 +41,9 @@
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
+    "mongodb": "^2.2.26",
     "mongoose": "^4.6.6",
+    "monk": "^4.0.0",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "nib": "^1.1.2",
@@ -58,6 +63,7 @@
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.0",
     "pug": "^2.0.0-beta6",
+    "react-select": "^1.0.0-rc.4",
     "request": "^2.78.0",
     "stripe": "^4.12.0",
     "tumblr.js": "^1.1.1",
@@ -66,14 +72,37 @@
     "validator": "^7.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "compression-webpack-plugin": "^0.4.0",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.1",
+    "es6-promise": "^4.1.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob": "^7.1.1",
     "mocha": "^3.1.2",
+    "rimraf": "^2.6.1",
     "sinon": "^2.0.0",
     "sinon-mongoose": "^1.3.0",
-    "supertest": "^3.0.0"
+    "style-loader": "^0.17.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "supertest": "^3.0.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
