--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   "author": "Sahat Yalkabov",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "test": "mocha --reporter spec",
     "postinstall": "npm rebuild node-sass",
-    "start": "cross-env NODE_ENV=production node app.js",
+    "start": "cross-env NODE_ENV=production node server.js",
     "build-dev": "rimraf dist && cross-env NODE_ENV=development webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "bootflat": "^2.0.4",
+    "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
@@ -38,6 +40,7 @@
     "fbgraph": "^1.3.0",
     "github": "^9.2.0",
     "instagram-node": "^0.5.8",
+    "jquery": "^3.2.1",
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
@@ -63,6 +66,9 @@
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.0",
     "pug": "^2.0.0-beta6",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
     "react-select": "^1.0.0-rc.4",
     "request": "^2.78.0",
     "stripe": "^4.12.0",
