--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "bootflat": "^2.0.4",
-    "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
@@ -64,18 +63,26 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.0",
+    "prop-types": "^15.5.10",
     "pug": "^2.0.0-beta6",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-gravatar": "^2.6.2",
+    "react-highlight-words": "^0.7.2",
     "react-hot-loader": "next",
+    "react-router": "^4.1.1",
     "react-select": "^1.0.0-rc.4",
     "request": "^2.78.0",
     "stripe": "^4.12.0",
     "tumblr.js": "^1.1.1",
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
-    "validator": "^7.0.0"
+    "validator": "^7.0.0",
+    "valuelink": "^1.5.1",
+    "vue": "^2.3.3",
+    "vue-router": "^2.5.3",
+    "vue-select": "sagalbot/vue-select"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -104,6 +111,9 @@
     "stylus-loader": "^3.0.1",
     "supertest": "^3.0.0",
     "url-loader": "^0.5.8",
+    "vue-loader": "^12.1.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
