--- a/package.json
+++ b/package.json
@@ -86,7 +86,10 @@
     "vue": "^2.3.3",
     "vue-router": "^2.5.3",
     "vue-select": "sagalbot/vue-select",
-    "vue-server-renderer": "^2.3.3"
+    "vue-server-renderer": "^2.3.3",
+    "vue-stash": "^2.0.1-beta",
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
