--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "build": "rimraf dist && npm run build:server && npm run build:client",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-build": "npm run heroku-build:server && npm run heroku-build:client",
-    "heroku-build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "heroku-build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-postbuild": "npm run heroku-build"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.16.1",
