--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
     "test": "mocha --reporter spec",
     "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:server && npm run build:client",
+    "build": "rimraf dist && yarn build:server && yarn build:client",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "axios": "^0.16.1",
