--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
   "presets": [
-    ["es2015", {"modules": false}],
-    "react"
-  ],
-  "plugins": [
-    "react-hot-loader/babel"
+    ["es2015", {"modules": false}]
   ]
 }
