add deployment to heroku and now.sh

--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:32768/dayflow
+MONGODB_URI=mongodb://heroku_tr4w0c1r:bba2v931cuioerqbc91ush2k1v@ds153501.mlab.com:53501/heroku_tr4w0c1r
 MONGOLAB_URI=mongodb://heroku_tr4w0c1r:bba2v931cuioerqbc91ush2k1v@ds153501.mlab.com:53501/heroku_tr4w0c1r
 
 SESSION_SECRET=123123
