--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "7.9.0"
+    "node": "7.10.0"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
@@ -11,10 +11,10 @@
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
     "test": "mocha --reporter spec",
     "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && yarn build:server && yarn build:client",
+    "build": "rimraf dist && npm run build:server && npm run build:client",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-postbuild": "yarn build"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -38,6 +38,7 @@
     "fb": "^2.0.0",
     "fbgraph": "^1.3.0",
     "github": "^9.2.0",
+    "helmet": "^3.6.1",
     "instagram-node": "^0.5.8",
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
@@ -71,7 +72,6 @@
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
     "validator": "^7.0.0",
-    "valuelink": "^1.5.1",
     "vue": "^2.3.3",
     "vue-router": "^2.5.3",
     "vue-select": "sagalbot/vue-select",
