--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "7.10.0"
+    "node": ">= 7.10.0",
+    "npm": ">=5"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
