--- a/now.json
+++ b/now.json
@@ -4,8 +4,7 @@
    "public": true,
    "dotenv": ".env.prod",
    "engines": {
-     "node": ">= 7.10.0",
-     "npm": ">=5.0.0"
+     "node": ">= 7.10.0"
    },
    "files": [
      "./public/css/main.css"
