--- a/.env.prod
+++ b/.env.prod
@@ -8,6 +8,7 @@ MAILGUN_PASSWORD=29eldds1uri6
 
 SENDGRID_USER=hslogin
 SENDGRID_PASSWORD=hspassword00
+SENDGRID_API_KEY=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
 
 NYT_KEY=9548be6f3a64163d23e1539f067fcabd:5:68537648
 
