--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.4",
     "node-sass-middleware": "^0.11.0",
-    "nodemailer": "^3.1.7",
+    "nodemailer": "^4.0.1",
+    "nodemailer-direct-transport": "^3.3.2",
     "passport": "0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
@@ -68,6 +69,7 @@
     "paypal-rest-sdk": "^1.7.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.78.0",
+    "sendgrid": "^5.1.0",
     "stripe": "^4.12.0",
     "tumblr.js": "^1.1.1",
     "twilio": "^3.3.1-edge",
@@ -82,15 +84,18 @@
     "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
+    "async": "^2.4.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "commander": "^2.9.0",
     "compression-webpack-plugin": "^0.4.0",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.1",
+    "csv": "^1.1.1",
     "es6-promise": "^4.1.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^11.0.0",
@@ -99,7 +104,9 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
+    "inquirer": "^3.0.6",
     "mocha": "^3.1.2",
+    "nightmare": "^2.10.0",
     "rimraf": "^2.6.1",
     "sinon": "^2.3.1",
     "sinon-mongoose": "^2.0.2",
