--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "7.10.0",
-    "yarn": "0.24.6"
+    "node": ">=7.10.0",
+    "npm": ">=5.0.0"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
