--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A boilerplate for Node.js web applications",
   "engines": {
     "node": ">=7.10.0",
-    "npm": ">=5.0.0"
+    "npm": ">=5.0.0",
+    "yarn": ">=0.24.6"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
