--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
   "presets": [
-    ["es2015", {"modules": false}]
+    ["es2015", {"modules": false}],
+    "stage-0"
   ],
   "plugins": [
     "syntax-dynamic-import"
-  ]  
+  ]
 }
