--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": [
-    ["es2015", {"modules": false}],
-    "stage-0"
+    ["env", { "modules": false }]
   ],
   "plugins": [
     "syntax-dynamic-import"
