--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "validator": "^7.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.5.3",
+    "vue-scrollto": "^2.6.8",
     "vue-scrollview": "^1.0.5",
     "vue-select": "sagalbot/vue-select",
     "vue-server-renderer": "^2.3.3",
