- add lodash - babel lodash to cherrie pick lodash modules - throttle vuesible scroll

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
   "presets": [
-    ["env", { "modules": false }]
+    "env"
   ],
   "plugins": [
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    "lodash"
   ]
 }
