--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "instagram-node": "^0.5.8",
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
+    "lodash": "^4.17.4",
     "lru-cache": "^4.0.2",
     "lusca": "^1.4.1",
     "mongodb": "^2.2.27",
@@ -89,6 +90,7 @@
     "async": "^2.4.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
