--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bcrypt-nodejs": "^0.0.3",
+    "bezier-easing": "^2.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "bootflat": "^2.0.4",
@@ -76,12 +77,11 @@
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
     "validator": "^7.0.0",
-    "vue": "^2.3.3",
+    "vue": "^2.3.4",
     "vue-router": "^2.5.3",
-    "vue-scrollto": "^2.6.8",
     "vue-scrollview": "^1.0.5",
     "vue-select": "sagalbot/vue-select",
-    "vue-server-renderer": "^2.3.3",
+    "vue-server-renderer": "^2.3.4",
     "vue-stash": "^2.0.1-beta",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2"
@@ -130,7 +130,7 @@
     "vue-loader": "^12.1.0",
     "vue-ssr-webpack-plugin": "^3.0.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.3.4",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
