--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "bootflat": "^2.0.4",
+    "bristol": "^0.3.3",
+    "bunyan": "^1.8.10",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
@@ -73,6 +75,7 @@
     "request": "^2.78.0",
     "sendgrid": "^5.1.0",
     "stripe": "^4.12.0",
+    "tracer": "^0.8.9",
     "tumblr.js": "^1.1.1",
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
@@ -82,7 +85,8 @@
     "vue-select": "sagalbot/vue-select",
     "vue-server-renderer": "^2.3.4",
     "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.2.0"
+    "vuex-router-sync": "^4.2.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "async": "^2.4.1",
