--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.0",
+    "pouchdb": "^6.2.0",
+    "pouchdb-adapter-fruitdown": "^6.2.0",
+    "pouchdb-adapter-idb": "^6.2.0",
+    "pouchdb-find": "^6.2.0",
+    "pouchdb-live-find": "^0.4.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.78.0",
     "sendgrid": "^5.1.0",
