--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
     "pouchdb": "^6.2.0",
     "pouchdb-adapter-fruitdown": "^6.2.0",
     "pouchdb-adapter-idb": "^6.2.0",
+    "pouchdb-collate": "^6.2.0",
     "pouchdb-find": "^6.2.0",
     "pouchdb-live-find": "^0.4.0",
+    "pouchdb-selector-core": "^6.2.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.78.0",
     "sendgrid": "^5.1.0",
