--- a/package.json
+++ b/package.json
@@ -18,42 +18,42 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "bcrypt-nodejs": "^0.0.3",
     "bezier-easing": "^2.0.3",
     "bluebird": "^3.4.7",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.17.2",
     "bootflat": "^2.0.4",
     "bristol": "^0.3.3",
     "bunyan": "^1.8.10",
     "chalk": "^1.1.3",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.2",
     "clockwork": "^0.1.4",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
-    "errorhandler": "^1.4.3",
-    "express": "^4.14.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.4",
     "express-flash": "^0.0.2",
-    "express-session": "^1.14.2",
-    "express-status-monitor": "^0.1.5",
+    "express-session": "^1.15.5",
+    "express-status-monitor": "^1.0.0",
     "express-stylus": "^0.1.0",
-    "express-validator": "^3.1.2",
+    "express-validator": "^3.2.1",
     "fb": "^2.0.0",
     "fbgraph": "^1.3.0",
     "github": "^9.2.0",
-    "helmet": "^3.6.1",
+    "helmet": "^3.8.1",
     "instagram-node": "^0.5.8",
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lodash": "^4.17.4",
-    "lru-cache": "^4.0.2",
-    "lusca": "^1.4.1",
-    "mongodb": "^2.2.27",
-    "mongoose": "^4.10.2",
-    "monk": "^5.0.2",
-    "morgan": "^1.7.0",
-    "multer": "^1.2.0",
+    "lru-cache": "^4.1.1",
+    "lusca": "^1.5.0",
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.6",
+    "monk": "^6.0.3",
+    "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.4",
@@ -61,7 +61,7 @@
     "nodemailer": "^4.0.1",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
-    "passport": "0.3.2",
+    "passport": "0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
@@ -72,29 +72,29 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.0",
-    "pug": "^2.0.0-beta6",
-    "request": "^2.78.0",
-    "sendgrid": "^5.1.0",
-    "stripe": "^4.12.0",
+    "pug": "^2.0.0-rc.3",
+    "request": "^2.81.0",
+    "sendgrid": "^5.2.1",
+    "stripe": "^4.24.0",
     "tracer": "^0.8.9",
     "tumblr.js": "^1.1.1",
-    "twilio": "^3.3.1-edge",
-    "twit": "^2.2.5",
+    "twilio": "^3.6.2",
+    "twit": "^2.2.9",
     "validator": "^7.0.0",
-    "vue": "^2.3.4",
-    "vue-autosize": "^1.0.0",
-    "vue-lazyload": "^1.0.4",
-    "vue-router": "^2.5.3",
+    "vue": "^2.4.2",
+    "vue-autosize": "^1.0.1",
+    "vue-lazyload": "^1.0.6",
+    "vue-router": "^2.7.0",
     "vue-select": "sagalbot/vue-select",
-    "vue-server-renderer": "^2.3.4",
+    "vue-server-renderer": "^2.4.2",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "async": "^2.4.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.23.0",
@@ -107,15 +107,15 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^3.5.0",
     "commander": "^2.9.0",
-    "compression-webpack-plugin": "^0.4.0",
+    "compression-webpack-plugin": "^1.0.0",
     "cross-env": "^5.0.0",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.4",
     "csv": "^1.1.1",
     "es6-promise": "^4.1.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.1.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
@@ -127,18 +127,18 @@
     "rimraf": "^2.6.1",
     "sinon": "^2.3.1",
     "sinon-mongoose": "^2.0.2",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "supertest": "^3.0.0",
-    "sw-precache-webpack-plugin": "^0.11.3",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.2.1",
+    "vue-loader": "^13.0.2",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.5.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.4",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
     "workbox-webpack-plugin": "^1.0.1"
