--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "vue-router": "^2.7.0",
     "vue-select": "sagalbot/vue-select",
     "vue-server-renderer": "^2.4.2",
+    "vuetify": "^0.14.11",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0",
     "winston": "^2.3.1"
