--- a/package.json
+++ b/package.json
@@ -83,9 +83,11 @@
     "vue": "^2.4.2",
     "vue-autosize": "^1.0.1",
     "vue-lazyload": "^1.0.6",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0",
     "vue-select": "sagalbot/vue-select",
     "vue-server-renderer": "^2.4.2",
+    "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
     "vuetify": "^0.14.11",
     "vuex": "^2.3.1",
