--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
     "lusca": "^1.5.0",
+    "marked": "^0.3.6",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.6",
     "monk": "^6.0.3",
@@ -87,6 +88,7 @@
     "vue-router": "^2.7.0",
     "vue-select": "sagalbot/vue-select",
     "vue-server-renderer": "^2.4.2",
+    "vue-simple-markdown": "^1.0.4",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
     "vuetify": "^0.14.11",
