--- a/package.json
+++ b/package.json
@@ -99,8 +99,10 @@
     "async": "^2.4.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-add-filehash": "^6.9.4",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-imports": "^1.4.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
