--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "csv": "^1.1.1",
     "es6-promise": "^4.1.0",
     "eslint": "^4.4.1",
@@ -130,6 +131,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "mocha": "^3.5.0",
+    "optimize-css-assets-webpack-plugin": "^3.1.1",
     "rimraf": "^2.6.1",
     "sinon": "^3.2.1",
     "sinon-mongoose": "^2.0.2",
