--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fbgraph": "^1.4.1",
     "github": "^9.2.0",
     "helmet": "^3.8.1",
+    "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
     "lastfm": "^0.9.2",
     "lob": "^4.1.1",
@@ -86,7 +87,7 @@
     "vue-lazyload": "^1.1.1",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0",
-    "vue-select": "sagalbot/vue-select",
+    "vue-select": "^2.2.0",
     "vue-server-renderer": "^2.4.2",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
