--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A boilerplate for Node.js web applications",
   "engines": {
     "node": "^8.4.0",
-    "npm": "^5.3.0"
+    "npm": "^5.3.0",
+    "yarn": "0.28.4",
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
