--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "validator": "^8.0.0",
     "vue": "^2.4.2",
     "vue-autosize": "^1.0.1",
+    "vue-focus": "^2.1.0",
     "vue-lazyload": "^1.1.1",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0",
