--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "monk": "^6.0.3",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
+    "nanoid": "^0.2.0",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.4",
