--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "bcrypt-nodejs": "^0.0.3",
     "bezier-easing": "^2.0.3",
     "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.1",
     "bootflat": "^2.0.4",
-    "bunyan": "^1.8.10",
+    "bunyan": "^2.0.2",
     "chalk": "^2.1.0",
     "cheerio": "^1.0.0-rc.2",
     "clockwork": "^0.1.4",
-    "compression": "^1.6.2",
+    "compression": "^1.7.0",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
@@ -38,10 +38,10 @@
     "express-session": "^1.15.5",
     "express-status-monitor": "^1.0.0",
     "express-stylus": "^0.1.0",
-    "express-validator": "^3.2.1",
+    "express-validator": "^4.1.1",
     "fb": "^2.0.0",
     "fbgraph": "^1.4.1",
-    "github": "^9.2.0",
+    "github": "^11.0.0",
     "helmet": "^3.8.1",
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
@@ -49,19 +49,19 @@
     "lob": "^4.1.1",
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
-    "lusca": "^1.5.0",
+    "lusca": "^1.5.1",
     "marked": "^0.3.6",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.11.6",
-    "monk": "^6.0.3",
+    "mongoose": "^4.11.11",
+    "monk": "^6.0.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "nanoid": "^0.2.0",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
-    "node-linkedin": "^0.5.4",
+    "node-linkedin": "^0.5.6",
     "node-sass-middleware": "^0.11.0",
-    "nodemailer": "^4.0.1",
+    "nodemailer": "^4.1.0",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
     "passport": "0.4.0",
@@ -75,68 +75,70 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.1",
-    "pug": "^2.0.0-rc.3",
+    "pug": "^2.0.0-rc.4",
     "request": "^2.81.0",
-    "sendgrid": "^5.2.1",
-    "stripe": "^4.24.0",
-    "tracer": "^0.8.9",
+    "sendgrid": "^5.2.3",
+    "stripe": "^5.0.0",
+    "tracer": "^0.8.11",
     "tumblr.js": "^1.1.1",
-    "twilio": "^3.6.2",
+    "twilio": "^3.6.6",
     "twit": "^2.2.9",
-    "validator": "^8.0.0",
+    "validator": "^8.2.0",
     "vue": "^2.4.2",
     "vue-autosize": "^1.0.1",
     "vue-focus": "^2.1.0",
-    "vue-lazyload": "^1.1.1",
+    "vue-lazyload": "^1.1.3",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0",
     "vue-select": "^2.2.0",
     "vue-server-renderer": "^2.4.2",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
-    "vuetify": "^0.15.2",
-    "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.2.0",
+    "vuetify": "^0.15.5",
+    "vuex": "^2.4.0",
+    "vuex-router-sync": "^4.3.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "async": "^2.4.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "async": "^2.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-filehash": "^6.9.4",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-imports": "^1.4.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.1",
-    "commander": "^2.9.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "chai": "^4.1.2",
+    "commander": "^2.11.0",
     "compression-webpack-plugin": "^1.0.0",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.4",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "csv": "^1.1.1",
-    "es6-promise": "^4.1.0",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "es6-promise": "^4.1.1",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-chai-friendly": "^0.4.0",
     "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob": "^7.1.1",
-    "inquirer": "^3.0.6",
+    "glob": "^7.1.2",
+    "inquirer": "^3.2.3",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4",
-    "mocha": "^3.5.0",
+    "less-loader": "^4.0.5",
+    "mocha": "^3.5.3",
     "optimize-css-assets-webpack-plugin": "^3.1.1",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
     "sinon-mongoose": "^2.0.2",
     "style-loader": "^0.18.2",
@@ -144,17 +146,17 @@
     "stylus-loader": "^3.0.1",
     "supertest": "^3.0.0",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.2",
+    "url-loader": "^0.5.9",
+    "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.4",
+    "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
-    "workbox-webpack-plugin": "^1.0.1"
+    "workbox-webpack-plugin": "^2.0.1"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
