--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "^8.4.0",
+    "node": "^7.10.0",
     "npm": "^5.3.0",
-    "yarn": "0.28.4"
+    "yarn": "^1.0.2"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
@@ -84,17 +84,17 @@
     "twilio": "^3.6.6",
     "twit": "^2.2.9",
     "validator": "^8.2.0",
-    "vue": "^2.4.2",
-    "vue-autosize": "^1.0.1",
+    "vue": "^2.4.4",
+    "vue-autosize": "^1.0.2",
     "vue-focus": "^2.1.0",
     "vue-lazyload": "^1.1.3",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0",
     "vue-select": "^2.2.0",
-    "vue-server-renderer": "^2.4.2",
+    "vue-server-renderer": "^2.4.4",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
-    "vuetify": "^0.15.5",
+    "vuetify": "^0.15.7",
     "vuex": "^2.4.0",
     "vuex-router-sync": "^4.3.1",
     "winston": "^2.3.1"
@@ -137,7 +137,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^3.5.3",
-    "optimize-css-assets-webpack-plugin": "^3.1.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
     "sinon-mongoose": "^2.0.2",
@@ -148,8 +148,8 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.4.4",
     "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
