--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "inquirer": "^3.2.3",
