--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "helmet": "^3.8.1",
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
+    "jsonwebtoken": "^8.0.1",
     "lastfm": "^0.9.2",
     "lob": "^4.1.1",
     "lodash": "^4.17.4",
