--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.0",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
+    "download": "^6.2.5",
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "express-flash": "^0.0.2",
@@ -42,6 +43,7 @@
     "fb": "^2.0.0",
     "fbgraph": "^1.4.1",
     "github": "^11.0.0",
+    "gm": "^1.23.0",
     "helmet": "^3.8.1",
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
@@ -57,6 +59,7 @@
     "monk": "^6.0.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
+    "mv": "^2.1.1",
     "nanoid": "^0.2.1",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
@@ -98,6 +101,7 @@
     "vuetify": "^0.15.7",
     "vuex": "^2.4.0",
     "vuex-router-sync": "^4.3.2",
+    "webfontloader": "^1.6.28",
     "winston": "^2.3.1"
   },
   "devDependencies": {
@@ -119,6 +123,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
+    "coffee-loader": "^0.8.0",
+    "coffeescript": "^2.0.1",
     "commander": "^2.11.0",
     "compression-webpack-plugin": "^1.0.0",
     "cross-env": "^5.0.5",
