--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "paypal-rest-sdk": "^1.7.1",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
+    "route-cache": "^0.4.3",
     "sendgrid": "^5.2.3",
     "stripe": "^5.1.0",
     "tracer": "^0.8.11",
@@ -98,6 +99,7 @@
     "vue-router": "^2.7.0",
     "vue-select": "^2.3.0",
     "vue-server-renderer": "^2.4.4",
+    "vue-styled-components": "^1.2.1",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
     "vuetify": "^0.15.7",
