--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "vue-router": "^2.7.0",
     "vue-select": "^2.3.0",
     "vue-server-renderer": "^2.4.4",
-    "vue-styled-components": "^1.2.1",
+    "vue-styled-components-fork": "^1.2.1",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
     "vuetify": "^0.15.7",
