--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --ignore client/ --ignore dist/ server.js",
     "test": "mocha --reporter spec",
+    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
+    "test:cover": "nyc --reporter=html --reporter=text mocha",
+    "dev": "nodemon --ignore client/ --ignore dist/ server.js",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:server && npm run build:client",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -131,6 +133,7 @@
     "coffeescript": "^2.0.1",
     "commander": "^2.11.0",
     "compression-webpack-plugin": "^1.0.1",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
@@ -146,9 +149,11 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "inquirer": "^3.3.0",
+    "istanbul": "^1.1.0-alpha.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
