--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
   - yarn test
 after_success:
   - yarn build
+  - heroku config:set TRAVIS_JOB_NUMBER=$TRAVIS_JOB_NUMBER TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER
 deploy:
   provider: heroku
   api_key:
