--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,13 +3,16 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: node:6.9.4
+image: node:latest
 
 pipelines:
   default:
-    - step:
-        caches:
-          - node
-        script: # Modify the commands below to build your repository.
-          - npm install
-          - npm test
+  - step:
+      caches:
+      - node
+      script: # Modify the commands below to build your repository.
+      - npm install
+      - npm run build
+      - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/acube.git
+      - git push heroku master
+      - echo "Code deployed to staging server"
