--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,7 @@ pipelines:
       - npm run build
       - npm i -g --unsafe-perm now
       - now deploy --team=flow --token=$NOW_API_KEY --public
-      - now alias --team=flow --token=$NOW_API_KEY
+      - now alias live.now.sh --team=flow --token=$NOW_API_KEY
       - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/acube.git
       - git push heroku master
       - echo "Code deployed to staging server"
