--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,9 +73,9 @@ production:
   stage: production
   script:
     - yarn global add now
-    - now rm dayflow --yes --safe --token=$NOW_API_KEY
     - now deploy --public --token=$NOW_API_KEY
     - now alias top.now.sh --token=$NOW_API_KEY
+    - now rm dayflow --yes --safe --token=$NOW_API_KEY || true
     - echo "Code deployed to production server"
   environment:
     name: production
