--- a/now.json
+++ b/now.json
@@ -46,12 +46,18 @@
      "bank.now.sh",
      "travel.now.sh",
      "box.now.sh",
+     "launch.now.sh",
      "dance.now.sh",
      "trendy.now.sh",
      "pop.now.sh",
      "new.now.sh",
      "net.now.sh",
      "sub.now.sh",
+     "sup.now.sh",
+     "up.now.sh",
+     "go.now.sh",
+     "buy.now.sh",
+     "shop.now.sh",
      "listing.now.sh",
      "free.now.sh",
      "follow.now.sh",
