--- a/now.json
+++ b/now.json
@@ -11,69 +11,123 @@
      "SESSION_SECRET": "@dayflow-session-secret"
    },
    "alias": [
-     "active.now.sh",
-     "live.now.sh",
-     "hot.now.sh",
-     "top.now.sh",
-     "sell.now.sh",
-     "pay.now.sh",
-     "book.now.sh",
-     "group.now.sh",
-     "bit.now.sh",
-     "byte.now.sh",
-     "market.now.sh",
-     "ship.now.sh",
-     "mail.now.sh",
-     "deal.now.sh",
-     "offer.now.sh",
-     "file.now.sh",
-     "sup.now.sh",
-     "eco.now.sh",
-     "ebay.now.sh",
-     "you.now.sh",
-     "pin.now.sh",
-     "bin.now.sh",
-     "bing.now.sh",
-     "job.now.sh",
-     "stores.now.sh",
-     "shops.now.sh",
-     "face.now.sh",
-     "red.now.sh",
-     "hit.now.sh",
-     "hub.now.sh",
-     "office.now.sh",
-     "paypal.now.sh",
-     "bank.now.sh",
-     "travel.now.sh",
-     "box.now.sh",
-     "launch.now.sh",
-     "dance.now.sh",
-     "trendy.now.sh",
-     "pop.now.sh",
-     "new.now.sh",
-     "net.now.sh",
-     "sub.now.sh",
-     "sup.now.sh",
-     "up.now.sh",
-     "go.now.sh",
-     "buy.now.sh",
-     "shop.now.sh",
-     "listing.now.sh",
-     "free.now.sh",
-     "follow.now.sh",
-     "notify.now.sh",
-     "fly.now.sh",
-     "broadcast.now.sh",
-     "reach.now.sh",
-     "marketing.now.sh",
-     "advertise.now.sh",
-     "advertising.now.sh",
-     "search.now.sh",
-     "look.now.sh",
-     "fire.now.sh",
-     "mac.now.sh",
-     "mic.now.sh",
-     "kiss.now.sh",
-     "eat.now.sh"
-   ]
+    "active.now.sh",
+    "ad.now.sh",
+    "ads.now.sh",
+    "advertise.now.sh",
+    "advertising.now.sh",
+    "app.now.sh",
+    "baby.now.sh",
+    "bank.now.sh",
+    "bin.now.sh",
+    "bing.now.sh",
+    "bit.now.sh",
+    "book.now.sh",
+    "box.now.sh",
+    "broadcast.now.sh",
+    "build.now.sh",
+    "buy.now.sh",
+    "byte.now.sh",
+    "ca.now.sh",
+    "chat.now.sh",
+    "city.now.sh",
+    "cn.now.sh",
+    "cook.now.sh",
+    "dance.now.sh",
+    "dayflow.now.sh",
+    "de.now.sh",
+    "deal.now.sh",
+    "download.now.sh",
+    "eat.now.sh",
+    "ebay.now.sh",
+    "eco.now.sh",
+    "en.now.sh",
+    "en.now.sh",
+    "eu.now.sh",
+    "face.now.sh",
+    "fan.now.sh",
+    "file.now.sh",
+    "find.now.sh",
+    "fire.now.sh",
+    "flow.now.sh",
+    "fly.now.sh",
+    "follow.now.sh",
+    "fr.now.sh",
+    "free.now.sh",
+    "go.now.sh",
+    "god.now.sh",
+    "gov.now.sh",
+    "group.now.sh",
+    "hash.now.sh",
+    "hit.now.sh",
+    "hk.now.sh",
+    "hle.now.sh",
+    "hoang.now.sh",
+    "hot.now.sh",
+    "hotel.now.sh",
+    "hotels.now.sh",
+    "hub.now.sh",
+    "image.now.sh",
+    "img.now.sh",
+    "in.now.sh",
+    "it.now.sh",
+    "job.now.sh",
+    "jp.now.sh",
+    "king.now.sh",
+    "kiss.now.sh",
+    "kr.now.sh",
+    "launch.now.sh",
+    "le.now.sh",
+    "listing.now.sh",
+    "look.now.sh",
+    "mac.now.sh",
+    "mail.now.sh",
+    "map.now.sh",
+    "maps.now.sh",
+    "market.now.sh",
+    "marketing.now.sh",
+    "message.now.sh",
+    "mic.now.sh",
+    "msg.now.sh",
+    "net.now.sh",
+    "new.now.sh",
+    "notify.now.sh",
+    "offer.now.sh",
+    "office.now.sh",
+    "pay.now.sh",
+    "paypal.now.sh",
+    "photo.now.sh",
+    "pin.now.sh",
+    "pixel.now.sh",
+    "pop.now.sh",
+    "reach.now.sh",
+    "ru.now.sh",
+    "se.now.sh",
+    "search.now.sh",
+    "sell.now.sh",
+    "sg.now.sh",
+    "ship.now.sh",
+    "shop.now.sh",
+    "shops.now.sh",
+    "snap.now.sh",
+    "store.now.sh",
+    "stores.now.sh",
+    "sub.now.sh",
+    "sup.now.sh",
+    "top.now.sh",
+    "travel.now.sh",
+    "trendy.now.sh",
+    "uk.now.sh",
+    "up.now.sh",
+    "upload.now.sh",
+    "us.now.sh",
+    "vi.now.sh",
+    "visa.now.sh",
+    "you.now.sh",
+    "web.now.sh",
+    "xo.now.sh",
+    "yah.now.sh",
+    "yo.now.sh",
+    "zip.now.sh"
+  ]
 }
