--- a/now.json
+++ b/now.json
@@ -54,6 +54,7 @@
     "follow.now.sh",
     "fr.now.sh",
     "free.now.sh",
+    "git.now.sh",
     "go.now.sh",
     "god.now.sh",
     "gov.now.sh",
@@ -100,6 +101,7 @@
     "pin.now.sh",
     "pixel.now.sh",
     "pop.now.sh",
+    "push.now.sh",
     "reach.now.sh",
     "ru.now.sh",
     "se.now.sh",
@@ -114,6 +116,7 @@
     "stores.now.sh",
     "sub.now.sh",
     "sup.now.sh",
+    "support.now.sh",
     "top.now.sh",
     "travel.now.sh",
     "trendy.now.sh",
