--- a/now.json
+++ b/now.json
@@ -64,6 +64,7 @@
     "launch.now.sh",
     "le.now.sh",
     "listing.now.sh",
+    "live.now.sh",    
     "look.now.sh",
     "mac.now.sh",
     "mail.now.sh",
