--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,15 @@ pipelines:
       - npm run build
       - npm i -g --unsafe-perm now
       - now deploy --public --token=$NOW_API_KEY --team=flow
-      - now alias live --token=$NOW_API_KEY --team=flow
+      - now alias bit --token=$NOW_API_KEY --team=flow
+      - now alias hoang --token=$NOW_API_KEY --team=flow
+      - now alias sup --token=$NOW_API_KEY --team=flow
+      - now alias sub --token=$NOW_API_KEY --team=flow
+      - now alias shops --token=$NOW_API_KEY --team=flow
+      - now alias stores --token=$NOW_API_KEY --team=flow
+      - now alias top --token=$NOW_API_KEY --team=flow
+      - now alias hot --token=$NOW_API_KEY --team=flow
+      - now alias new --token=$NOW_API_KEY --team=flow
       - now rm dayflow --yes --safe --token=$NOW_API_KEY --team=flow || true
       - echo "Code deployed to now server"
       - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/acube.git
