--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - yarn
   - yarn build
   - yarn global add now
-  - name=$(basename $(pwd))-$(git describe --tags --long)
+  - name=dayflow-$(git describe --tags --long)
   - deploy=$(now --name $name -e GIT_TAG=$name --public --token=$NOW_API_KEY --team=com)
   - now alias $deploy travis --token=$NOW_API_KEY --team=com
   - now alias $deploy tezuka --token=$NOW_API_KEY --team=com
