--- a/now.json
+++ b/now.json
@@ -1,108 +1,107 @@
 {
-   "name": "dayflow",
-   "type": "npm",
-   "public": true,
-   "dotenv": ".env.prod",
-   "engines": {
-     "node": ">= 8.6.0"
-   },
-   "alias": [
-    "active.now.sh",
-    "advertise.now.sh",
-    "advertising.now.sh",
-    "baby.now.sh",
-    "bank.now.sh",
-    "bin.now.sh",
-    "bing.now.sh",
-    "bit.now.sh",
-    "book.now.sh",
-    "box.now.sh",
-    "byte.now.sh",
-    "ca.now.sh",
-    "city.now.sh",
-    "cook.now.sh",
-    "dance.now.sh",
-    "dayflow.now.sh",
-    "de.now.sh",
-    "deal.now.sh",
-    "eat.now.sh",
-    "ebay.now.sh",
-    "eco.now.sh",
-    "en.now.sh",
-    "en.now.sh",
-    "eu.now.sh",
-    "face.now.sh",
-    "fan.now.sh",
-    "file.now.sh",
-    "fire.now.sh",
-    "fly.now.sh",
-    "follow.now.sh",
-    "fr.now.sh",
-    "free.now.sh",
-    "god.now.sh",
-    "gov.now.sh",
-    "group.now.sh",
-    "hash.now.sh",
-    "hit.now.sh",
-    "hk.now.sh",
-    "hle.now.sh",
-    "hoang.now.sh",
-    "hot.now.sh",
-    "hotel.now.sh",
-    "hotels.now.sh",
-    "hub.now.sh",
-    "img.now.sh",
-    "it.now.sh",
-    "job.now.sh",
-    "jp.now.sh",
-    "kiss.now.sh",
-    "kr.now.sh",
-    "launch.now.sh",
-    "le.now.sh",
-    "listing.now.sh",
-    "look.now.sh",
-    "mac.now.sh",
-    "mail.now.sh",
-    "map.now.sh",
-    "market.now.sh",
-    "marketing.now.sh",
-    "message.now.sh",
-    "mic.now.sh",
-    "net.now.sh",
-    "new.now.sh",
-    "notify.now.sh",
-    "offer.now.sh",
-    "office.now.sh",
-    "pay.now.sh",
-    "paypal.now.sh",
-    "photo.now.sh",
-    "pin.now.sh",
-    "pixel.now.sh",
-    "pop.now.sh",
-    "reach.now.sh",
-    "ru.now.sh",
-    "se.now.sh",
-    "search.now.sh",
-    "sell.now.sh",
-    "sg.now.sh",
-    "ship.now.sh",
-    "shops.now.sh",
-    "snap.now.sh",
-    "stores.now.sh",
-    "sub.now.sh",
-    "sup.now.sh",
-    "support.now.sh",
-    "top.now.sh",
-    "travel.now.sh",
-    "trendy.now.sh",
-    "uk.now.sh",
-    "upload.now.sh",
-    "us.now.sh",
-    "vi.now.sh",
-    "visa.now.sh",
-    "you.now.sh",
-    "xo.now.sh",
-    "yah.now.sh",
-    "zip.now.sh"
+  "name": "dayflow",
+  "type": "npm",
+  "public": true,
+  "dotenv": ".env.prod",
+  "engines": {
+    "node": ">= 8.6.0"
+  },
+  "alias": [
+    "active",
+    "advertise",
+    "advertising",
+    "baby",
+    "bank",
+    "bin",
+    "bing",
+    "bit",
+    "book",
+    "box",
+    "byte",
+    "ca",
+    "city",
+    "cook",
+    "dance",
+    "dayflow",
+    "de",
+    "deal",
+    "eat",
+    "ebay",
+    "eco",
+    "en",
+    "eu",
+    "face",
+    "fan",
+    "file",
+    "fire",
+    "fly",
+    "follow",
+    "fr",
+    "free",
+    "god",
+    "gov",
+    "group",
+    "hash",
+    "hit",
+    "hk",
+    "hle",
+    "hoang",
+    "hot",
+    "hotel",
+    "hotels",
+    "hub",
+    "img",
+    "it",
+    "job",
+    "jp",
+    "kiss",
+    "kr",
+    "launch",
+    "le",
+    "listing",
+    "look",
+    "mac",
+    "mail",
+    "map",
+    "market",
+    "marketing",
+    "message",
+    "mic",
+    "net",
+    "new",
+    "notify",
+    "offer",
+    "office",
+    "pay",
+    "paypal",
+    "photo",
+    "pin",
+    "pixel",
+    "pop",
+    "reach",
+    "ru",
+    "se",
+    "search",
+    "sell",
+    "sg",
+    "ship",
+    "shops",
+    "snap",
+    "stores",
+    "sub",
+    "sup",
+    "support",
+    "top",
+    "travel",
+    "trendy",
+    "uk",
+    "upload",
+    "us",
+    "vi",
+    "visa",
+    "you",
+    "xo",
+    "yah",
+    "zip"
   ]
 }
