--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "build": "rimraf dist && npm run build:server && npm run build:client",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-postbuild": "yarn build"
+    "now": "yarn build && now --public --force && now alias us && open https://us.now.sh/build",
+    "heroku-postbuild": "yarn build",
+    "now-build": "echo hello"
   },
   "dependencies": {
     "axios": "^0.16.2",
